added link to the notebook in the repository

--- a/files/HW_1/HW1.ipynb
+++ b/files/HW_1/HW1.ipynb
@@ -2279,7 +2279,7 @@
     "\n",
     "Linear Regression models assume linear relations between design parameters and outputs, which does not hold for this problem because of non-linear effect of design parameters to electromagnetic behaviour of antennas. Other assumptions of Linear Regression are also problematic such as normality of residuals (since magnitude values are between 0-1 and others are between -1-1), multicollinearity (since input parameters are physical design parameters, there are high correlation between some of them). I think that test results reflect these problems as they are not that good.\n",
     "\n",
-    "For both models, linearity problem can be solved by adding transformed design parameters to the input space, for example second degree polynomial terms of the current design parameters. By doing this, we can enable both type of models to account for these new non-linear variables in a linear way. For linear regression models, increaasing sample size and penalization might be needed because there would be high number of features."
+    "For both models, linearity problem can be solved by adding transformed design parameters to the input space, for example second degree polynomial terms of the current design parameters. By doing this, we can enable both type of models to account for these new non-linear variables in a linear way. For linear regression models, increasing sample size and penalization might be needed because there would be high number of features."
    ]
   }
  ],
